styles/default.css
:root {
  --width:100%;
}

#supernerd-widget-bar-top-coffee {
  top:0px;
  width:var(--width);
}

#supernerd-widget-bar-bottom-coffee {
  bottom:0px;
}

.bar-container {
  background-color:var(--background);
  width:auto;
  height:20px;
  position:relative;
  z-index:-1;
  box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.8);
}

.widg, .playing-output {
  color:var(--foreground);
  font-family:'Menlo';
  font-size:10px;
  font-smoothing:antialiasing;
  z-index:1;
  float:left;
  padding-left:8px;
  padding-right:8px;
  padding-bottom:4px;
  padding-top:4px;
}

.playing-output {
  width:200px;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.green {
  color:var(--color6);
}
.yellow {
  color:var(--color3);
}
.red {
  color:var(--color2);
}
.blue {
  color:var(--color5);
}
.cyan {
  color:var(--color5);
}
.magenta {
  color:var(--color4);
}
.white {
  color:var(--foreground);
}
.black {
  color:var(--background);
}

#supernerd-widget-music-player-coffee {
  top:0px;
  left:0px;
  width:240px;
  display:inline;
  white-space: nowrap;
  text-overflow:ellipsis;
  overflow: hidden;
}

#supernerd-widget-window-coffee {
  top:0px;
  width:var(--width);
  display:flex;
  align-items: center;
  justify-content: center;
}

#supernerd-widget-base-monitor-coffee {
  top:0px;
  right:0px;
  width:auto;
  display:inline;
}

#supernerd-widget-app-launcher-coffee {
  bottom:0px;
  left:0px;
  width:auto;
  display:inline;
}

#supernerd-widget-desktop-coffee {
  bottom:0px;
  width:var(--width);
  display:flex;
  align-items: center;
  justify-content: center;
}

.desk {
  opacity: 0.4;
}
.active {
  opacity:1;
  text-decoration: underline;
}

#home {
  color:var(--color1);
}
#browser {
  color:var(--color2);
}
#mail {
  color:var(--color3);
}
#messages {
  color:var(--color4);
}
#terminal {
  color:var(--color5);
}
#editor {
  color:var(--color6);
}

#supernerd-widget-system-monitor-coffee {
  bottom:0px;
  right:0px;
  width:auto;
  display:inline;
}

### Animations

.closed {
  opacity:0.6;
}
.open {
  opacity:1;
}


@keyframes marquee {
  from {
    margin-left: 0%;

  }
  to {
    margin-left: -40%;
  }
}
@keyframes bounce {
  from {
    padding-left:0px;
  }
  to {
    padding-left:-200px;
  }
}

